fixed history on overlapping with footer on mobile

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -4,8 +4,6 @@
 
 html, body {
     overflow-x: hidden; 
-    overflow-y: hidden;
-    overflow: hidden;
 }
 
 body {
@@ -177,12 +175,6 @@ a{
 }
 
 @media screen and (max-width: 600px){
-  .main {
-    position: absolute;
-    z-index: 2;
-    top: 50px;
-    max-width: 90%;
-  }
 
   .we-out {
     min-height: 200px;
@@ -225,7 +217,6 @@ a{
 
 @media screen and (max-width: 600px){
   .main {
-    position: absolute;
     z-index: 2;
     top: 50px;
     max-width: 90%;
@@ -244,4 +235,8 @@ a{
     width: 30%;
     margin-left: 50%;
   }
+}
+
+footer {
+  display: block;
 }
